--- a/app/src/main/res/layout/activity_p_set_present.xml
+++ b/app/src/main/res/layout/activity_p_set_present.xml
@@ -2,20 +2,25 @@
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     >
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <androidx.appcompat.widget.Toolbar
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteY="1dp">
 
             <TextView
                 android:id="@+id/toolbar_title"
@@ -25,7 +30,6 @@
                 android:text="" />
         </androidx.appcompat.widget.Toolbar>
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,14 +38,13 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="133dp"
             android:layout_marginLeft="133dp"
-            android:layout_marginTop="482dp"
-            android:layout_marginBottom="48dp"
+            android:layout_marginBottom="8dp"
             android:text="어떤 선물인가요?"
             android:textColor="#4A4A4A"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
@@ -72,10 +75,11 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="153dp"
             android:layout_marginLeft="153dp"
-            android:layout_marginTop="192dp"
+            android:layout_marginTop="112dp"
             android:background="@android:color/transparent"
             android:src="@drawable/album_icon"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageView" />
 
@@ -88,14 +92,13 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="149dp"
             android:layout_marginLeft="149dp"
-            android:layout_marginTop="520dp"
-            android:layout_marginBottom="224dp"
+            android:layout_marginBottom="252dp"
             android:hint="선물이름 입력"
             android:textColor="#4A4A4A"
             android:textColorHint="#4A4A4A"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.026"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
@@ -107,16 +110,15 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="163dp"
             android:layout_marginLeft="163dp"
-            android:layout_marginTop="644dp"
-            android:layout_marginBottom="104dp"
+            android:layout_marginBottom="40dp"
             android:text="설정완료"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
