--- a/app/src/main/res/layout/activity_p_set_balloon.xml
+++ b/app/src/main/res/layout/activity_p_set_balloon.xml
@@ -47,13 +47,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="88dp"
+            android:layout_marginBottom="40dp"
             android:text="풍선의 크기를 정해주세요"
             android:textColor="#4A4A4A"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
@@ -69,7 +68,7 @@
             android:id="@+id/bar_setBalloon"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="264dp"
+            android:layout_marginBottom="224dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -79,7 +78,7 @@
             android:id="@+id/text_totalRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="200dp"
+            android:layout_marginBottom="160dp"
             android:text="0"
             android:textColor="@color/black"
             android:textSize="30sp"
@@ -91,12 +90,12 @@
             android:id="@+id/btn_setBalloon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="152dp"
-            android:layout_marginRight="152dp"
-            android:layout_marginBottom="60dp"
+            android:layout_marginBottom="68dp"
             android:text="완료"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
